--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             
                             <div class="mt-2">I created a SQL database of over 1 million known benign and malicious URLs and developed a web app that can take a URL 
                                 input from a user, automatically query the database to search for that URL, and tell the user whether it is safe or dangerous. 
-                                If the URL is not in the database the app will automatically pass the it through a classification model I built using Python to predict 
+                                If the URL is not in the database the app will automatically run it through a classification model I built using Python to predict 
                                 the probability of the URL being malicious. The model was trained using Natural Language Processing and Logistic Regression and 
                                 had an accuracy score of 98%.
                                 <br>
