--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
                             <div class="mt-2">For this project I worked collaboratively with a team of 3 to compile, analyze, and visualize data for both COVID-19 cases up 
                                 to 22 October, 2020 and fire anomalies (e.g. wildfires) in 2020 up to the same date. We created a web app that displayed an interactive map showing 
-                                a map of daily reports of confirmed COVID cases layered over heat maps of fire anomalies in the continental United States. We concluded that there 
+                                daily reports of confirmed COVID cases layered over heat maps of fire anomalies in the continental United States. We concluded that there 
                                 was a possible positive relationship between the occurrence fire anomalies and confirmed COVID cases. We speculated that this could be caused by poor protective 
                                 measures during evacuations.
                                 <br>
@@ -151,9 +151,9 @@
                             <h3 class="mb-0">Natural Language Processing Classification Model</h3><br>
 
                             <img class="img-thumbnail" src="assets/img/patrick-tomasso-Oaqk7qqNh_c-unsplash.jpg" align="top">
-                            <div class="mt-2">Using Push Shift API, I created a function that pulled a total of 10,000 comments from two subreddit pages and combined them into one dataset. 
+                            <div class="mt-2">Using Push Shift API, I created a function that pulled a total of 10,000 comments from two subreddit pages which I then combined into one dataset. 
                                 Then, using Natural Language Processing and Python, I created a model that could accurately predict whether text would come from one subreddit page or the other.
-                                I designed the model to analyze language coming from both pages and train itself to learn how to distinguish whether any given language was more fit for one source or the other.
+                                I designed the model to analyze language coming from both pages and train itself to learn how to distinguish whether any given language was more fit for either source.
                                 The model performed well, returning an accuracy score of about 84%.
                                 <br>
                                 To see view this project, 
