--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <li div title= "Python" class="list-inline-item"><i class="fab fa-python"></i></li>
                         <li div title= "PostgreSQL" class="list-inline-item"><i class="devicon-postgresql-plain"></i></li>
                         <li div title= "GitHub" class="list-inline-item"><i class="fab fa-github"></i></li>
-                        <li div title= "Virtual Studio" class="list-inline-item"><i class="devicon-visualstudio-plain"></i></li>
+                        <li div title= "Visual Studio" class="list-inline-item"><i class="devicon-visualstudio-plain"></i></li>
                         <li div title= "Amazon Web Services" class="list-inline-item"><i class="devicon-amazonwebservices-original"></i></li>
                         <li div title= "Microsoft Suite" class="list-inline-item"><i class="fab fa-microsoft"></i></li>
                         <li div title= "Trello" class="list-inline-item"><i class="fab fa-trello"></i></li>
